# md-reheader

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  version-check.yml
configs/data/: github_code.yaml  goodwiki.yaml
configs/eval/: default.yaml
configs/training/: axolotl_1gpu.yaml  axolotl_2gpu.yaml  axolotl_v2_1gpu.yaml  axolotl_v2_2gpu.yaml  axolotl_v3_2gpu.yaml  full_ft_1gpu.yaml  full_ft_2gpu.yaml
docs/: dataset_card.md  model_card.md  vram_profile.md
example/: example_input.md  example_output.md
scripts/: download_data.py  prepare_dataset.py  profile_vram.py  publish_model.py  run_baselines.py  run_eval.py  run_training.py
src/md_reheader/: cli.py  models.py
src/md_reheader/data/: apply.py  extract.py  filter.py  format.py  strip.py
src/md_reheader/eval/: analysis.py  baselines.py  evaluate.py  metrics.py
src/md_reheader/inference/: predict.py  remote.py
src/md_reheader/training/: train.py
tests/: test_apply.py  test_batching.py  test_corrupt.py  test_extract.py  test_filter.py  test_format.py  test_metrics.py  test_prepare.py  test_strip.py
