[project]
name = "md-reheader"
version = "0.1.0"
description = "Fine-tuned Qwen3-0.6B for restoring heading hierarchy in markdown documents"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
dependencies = [
    "torch>=2.8,<2.10",
    "transformers==5.3.0",
    "datasets>=4.5",
    "wandb>=0.25",
    "evaluate>=0.4.1",
    "huggingface-hub>=1.1",
    "pydantic>=2.10",
    "numpy>=1.24",
    "accelerate==1.13.0",
    "markdown-it-py>=3.0.0",
    "axolotl==0.15.0",
    "cut-cross-entropy[transformers] @ git+https://github.com/axolotl-ai-cloud/ml-cross-entropy.git@e8ad129",
    "flash-attn>=2.8",
    "torchvision>=0.23.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "pre-commit>=4.0",
    "nbstripout>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/md_reheader"]

[tool.ruff]
src = ["src"]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["md_reheader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
