[project]
name = "md-reheader"
version = "0.1.2"
description = "Restore heading hierarchy in markdown documents using a fine-tuned Qwen3-0.6B model"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Joel Barmettler", email = "joel.barmettler@uzh.ch" },
]
keywords = ["markdown", "headings", "nlp", "document-structure", "fine-tuning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "torch>=2.8,<2.10",
    "transformers==5.3.0",
    "accelerate>=1.0",
    "pydantic>=2.10",
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "pre-commit>=4.0",
    "nbstripout>=0.9",
]

[project.urls]
Homepage = "https://github.com/joelbarmettlerUZH/md-reheader"
Repository = "https://github.com/joelbarmettlerUZH/md-reheader"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/md_reheader"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.ruff]
src = ["src"]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["md_reheader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
